<resources>
    <string name="app_name">ElectricCarApp</string>
    <string name="title">Electric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="bateria">Bateria</string>
    <string name="potencia">Potência</string>
    <string name="recarga">Recarga</string>
    <string name="preco_kw">Preço kWh</string>
    <string name="km_percorrido">Km Percorrido</string>
    <string name="btn_calcular">Calcular</string>
    <string name="tv_resultado">Resultado:</string>
    <string name="tv_calcular_autonomia">Calcular Autonomia</string>
    <string name="btn_redirect_calcular">Calcular</string>
    <string name="no_wifi">Sem conexão ):</string>
    <string name="response_error">Algo deu errado, por favor, tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
</resources>