<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_close"
        android:src="@drawable/ic_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_calcular_autonomia"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_calcular_autonomia"
        app:layout_constraintStart_toStartOf="@id/iv_close"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <EditText
        android:id="@+id/et_preco_kw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ems="10"
        android:hint="@string/preco_kw"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_calcular_autonomia" />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="@id/et_preco_kw"
        app:layout_constraintStart_toStartOf="@id/et_preco_kw"
        app:layout_constraintTop_toBottomOf="@id/et_preco_kw" />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/btn_calcular"
        app:layout_constraintEnd_toEndOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="@id/et_km_percorrido"
        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido" />

    <TextView
        android:id="@+id/tv_resultado"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tv_resultado"
        app:layout_constraintStart_toStartOf="@id/btn_calcular"
        app:layout_constraintTop_toBottomOf="@id/btn_calcular" />

    <TextView
        android:id="@+id/tv_resultado_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_resultado"
        app:layout_constraintTop_toTopOf="@+id/tv_resultado" />

</androidx.constraintlayout.widget.ConstraintLayout>